welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:12: error: not found: value estfacemur
if (!estfacemur()){
     ^